<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_nav_map_selector"
        android:title="@string/nav_map" />

    <!-- 
      Empty placeholder for the middle FAB button.
      Using transparent icon to create the gap.
    -->
    <item
        android:id="@+id/nav_post_placeholder"
        android:icon="@android:color/transparent"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat_selector"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_selector"
        android:title="@string/nav_profile" />

</menu>
